--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
   "scripts": {
     "sync": "ts-node src/index.ts",
     "build": "tsc",
-    "test": "jest --detectOpenHandles",
     "format-check": "prettier --config .prettierrc --check ./{src,tests}/**/*.ts",
     "format": "yarn format-check --write",
     "ts-watch": "tsc --watch",
@@ -29,30 +28,13 @@
     "@typescript-eslint/eslint-plugin": "^6.19.1",
     "@typescript-eslint/parser": "^6.19.1",
     "eslint": "^8.56.0",
-    "jest": "^29.7.0",
     "pre-commit": "^1.2.2",
     "prettier": "^3.2.4",
-    "ts-jest": "^29.1.2",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
   },
-  "jest": {
-    "collectCoverage": true,
-    "coverageReporters": [
-      "text",
-      "cobertura"
-    ],
-    "testEnvironment": "node",
-    "preset": "ts-jest",
-    "testMatch": [
-      "**/tests/**/*.test.ts"
-    ],
-    "testTimeout": 2000,
-    "forceExit": true
-  },
   "pre-commit": [
     "lint",
-    "format-check",
-    "test"
+    "format-check"
   ]
 }
