--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "ftp-sync-tool",
+  "name": "chillwhales-tracker",
   "version": "1.0.0",
   "authors": [
     "Markus Velten"
   ],
-  "main": "dist/src/index.js",
+  "main": ".build/src/index.js",
   "license": "MIT",
   "scripts": {
     "sync": "ts-node src/index.ts",
