further improvements and rank labelling added

--- a/configs/beans.config.json
+++ b/configs/beans.config.json
@@ -1,5 +1,7 @@
 {
   "collection": "GMBeans",
   "assetContract": "0x33517e5fedec388da59125fbabea6e2f6395c510",
-  "functionsNamespace": "generic"
+  "functionsNamespace": "generic",
+  "realtimeRanking": true,
+  "nonUniqueRanking": true
 }
