--- a/configs/burntwhales.config.json
+++ b/configs/burntwhales.config.json
@@ -1,5 +1,6 @@
 {
   "collection": "BurntWhales",
   "assetContract": "0x8bf5bf6c2f11643e75dc4199af2c7d39b1aefcd3",
-  "functionsNamespace": "generic"
+  "functionsNamespace": "generic",
+  "realtimeRanking": true
 }
