--- a/configs/lyxen.config.json
+++ b/configs/lyxen.config.json
@@ -1,5 +1,7 @@
 {
   "collection": "LyxenDemons",
   "assetContract": "0x669c42149f9a54a0ee63b4527f8d066247f5dbd0",
-  "functionsNamespace": "generic"
+  "functionsNamespace": "generic",
+  "realtimeRanking": true,
+  "nonUniqueRanking": true
 }
