--- a/configs/burntpunx.config.json
+++ b/configs/burntpunx.config.json
@@ -1,5 +1,6 @@
 {
   "collection": "BurntPunX",
   "assetContract": "0x66b738baEA30243bfe4c168A11E79dD1F930E59C",
-  "functionsNamespace": "generic"
+  "functionsNamespace": "generic",
+  "realtimeRanking": true
 }
